--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "daisyui": "^5.1.7",
+    "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.307",
     "react-router-dom": "^7.8.2",
+    "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^11.0.5",
     "react-typing-effect": "^2.0.5",
     "tailwindcss": "^4.1.13"
